<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2022 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          https://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <!-- Landing Page Content -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/landing_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="215dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/app_name" />

            <TextView
                style="@style/TextAppearance.MyApp.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/trending_text"
                android:textColor="#000000" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/trending_movie_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#F0F4F9"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="16dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="227dp"
                        android:layout_marginBottom="0dp"
                        android:contentDescription="@string/movie_title"
                        android:scaleType="centerCrop"
                        android:src="@drawable/movie_banner"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.CardImage" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <TextView
                            android:id="@+id/trending_movie_title"
                            style="@style/TextAppearance.MyApp.TitleMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/movie_title"
                            android:textColor="#1F1F1F" />

                        <TextView
                            android:id="@+id/trending_movie_desc"
                            style="@style/TextAppearance.MyApp.TitleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:text="@string/default_movie_desc"
                            android:textColor="#444746" />

                        <TextView
                            android:id="@+id/trending_movie_price"
                            style="@style/TextAppearance.MyApp.TitleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text=""
                            android:textColor="#444746" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Add other sections like Trending movie if needed -->
            <TextView
                style="@style/TextAppearance.MyApp.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/upcoming_next"
                android:textColor="#000000" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/upcoming_movie_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#F0F4F9"
                android:clickable="false"
                android:focusable="false"
                app:cardCornerRadius="16dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="227dp"
                        android:layout_marginBottom="0dp"
                        android:contentDescription="@string/upcoming_title"
                        android:scaleType="centerCrop"
                        android:src="@drawable/upcoming_banner"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.CardImage" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <TextView
                            android:id="@+id/upcoming_movie_title"
                            style="@style/TextAppearance.MyApp.TitleMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/upcoming_title"
                            android:textColor="#1F1F1F" />

                        <TextView
                            android:id="@+id/upcoming_movie_desc"
                            style="@style/TextAppearance.MyApp.TitleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:text="@string/coming_soon_text"
                            android:textColor="#444746" />

                        <TextView
                            android:id="@+id/upcoming_movie_price"
                            style="@style/TextAppearance.MyApp.TitleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text=""
                            android:textColor="#444746" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/TextAppearance.MyApp.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000000"
                android:text="@string/resources" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/github_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/md_theme_primary"
                    android:text="@string/github"
                    android:textColor="@android:color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/codelabs_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:backgroundTint="@color/md_theme_primary"
                    android:text="@string/codelab"
                    android:textColor="@android:color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/license_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/md_theme_primary"
                    android:text="@string/licenses"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
